# state-voterfiles

./: .env  .gitignore  .python-version  1password-credentials.json  404.html  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  field_maps.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  state_file_intake.py  tec_expenses.py  tec_postgres.py  tec_validator.py
.github/workflows/: ci.yml
app/conf/: config.py  logger.py  tec_postgres.py
app/funcs/: category_funcs.py  general_funcs.py  record_key_generator.py  validator_funcs.py
app/getters/: tec_contribution_getter.py  tec_expense_getter.py
app/loaders/: async_tec_expenses.py  tec_expenses.py  tec_loader.py  toml_loader.py
app/models/: tec_contribution_model.py  tec_expense_model.py  tec_filer_model.py
app/pandas_schemas/: tec_expense_schema.py
app/search_tools/: tec_search.py
app/utils/: file_field_assigner.py  pydantic_builder.py
app/validators/: tec_contribution_validator.py  tec_expenditure_validator.py  tec_filers_validator.py  tec_universal_validator.py
conf/: config_validation.py  postgres.py
docs/: index.md
docs/funcs/: csv_reader.md  toml_reader_doc.md  voter_file_loader.md  voter_info_doc.md
docs/pages/: project_layout.md
docs/state-fields/: ohio-fields.md  texas-fields.md
docs/validators/: config.md  record_renamer.md  texas_validator.md
funcs/: column_formats.py  validation.py
funcs/csv_reader/: index.html
funcs/toml_reader_doc/: index.html
funcs/voter_file_loader/: index.html
funcs/voter_info_doc/: index.html
models/: texas.py  texas_json.py
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
state-fields/ohio-fields/: index.html
state-fields/texas-fields/: index.html
state_fields/: texas-fields.toml
state_formatting/: ohio-voter-format.toml
state_voterfiles/: __init__.py  folder_paths.toml  main.py  state_tools.py
state_voterfiles/conf/: postgres.py
state_voterfiles/field_references/: ohio-fields.toml  texas-fields.toml
state_voterfiles/funcs/: column_formats.py  json_funcs.py  record_keygen.py  scratch_8.py  validation.py
state_voterfiles/models/: texas.py  texas_json.py
state_voterfiles/tests/: test_prevalidationcleanup.py
state_voterfiles/utils/: create_db_tables.py  create_validator.py  csv_loader.py  database_loader.py  file_download.py  logger.py  new_create_validator.py  state_validator.py  toml_reader.py
state_voterfiles/validatiors/: texas.py  validator_template.py
utils/: csv_loader.py  state_validator.py  toml_reader.py
validatiors/: ohio.py  texas.py  validator_template.py
validators/config/: index.html
(+110 files in other folders)
