[tool.poetry]
name = "state-voterfiles"
version = "0.1.0"
description = ""
authors = ["John R. Eakin <johnreakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomli = ">=2.0.1,<2.1.0"
pandas = ">=1.4.3,<1.5.0"
pydantic = "^1.10.7"
sqlalchemy = ">=1.4.46,<1.5.0"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
zipcodes = ">=1.2.0,<1.3.0"
psycopg2 = "^2.9.6"
orjson = "^3.8.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
