[tool.poetry]
name = "state-voterfiles"
version = "0.1.0"
description = ""
authors = ["John R. Eakin <johnreakin@gmail.com>"]
readme = "README.md"
packages = [{include = "state_voterfiles"}]

[tool.poetry.dependencies]
python = ">=3.10"
tomli = ">=2.0.1,<2.1.0"
pandas = "^2.2.2"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
zipcodes = ">=1.2.0,<1.3.0"
psycopg2 = "^2.9.6"
orjson = "^3.8.11"
requests = "^2.30.0"
icecream = "^2.1.3"
pydantic-extra-types = "^2.9.0"
logfire = "^0.52.0"
chardet = "^5.2.0"
usaddress = "^0.5.10"
phonenumbers = "^8.13.45"
rapidfuzz = "^3.9.7"
aiofiles = "^24.1.0"
geopy = "^2.4.1"
tenacity =  ">=8.1.0,<9"
geopandas = "^1.0.1"
shapely = "^2.0.6"
sqlmodel = "0.0.21"
snowflake-connector-python = "^3.12.2"
snowflake-sqlalchemy = "^1.6.1"
election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true}
usaddress-scourgify = "^0.6.0"


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.112.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
