[tool.poetry]
name = "state-voterfiles"
version = "0.1.0"
description = ""
authors = ["John R. Eakin <johnreakin@gmail.com>"]
readme = "README.md"
packages = [{include = "state_voterfiles"}]

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2.2"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
zipcodes = ">=1.2.0,<1.3.0"
psycopg2 = "^2.9.6"
orjson = "^3.8.11"
requests = "^2.30.0"
logfire = "^2.3.0"
chardet = "^5.2.0"
rapidfuzz = "^3.9.7"
aiofiles = "^24.1.0"
geopy = "^2.4.1"
tenacity =  ">=8.1.0,<9"
geopandas = "^1.0.1"
shapely = "^2.0.6"
snowflake-connector-python = "^3.12.2"
snowflake-sqlalchemy = "^1.6.1"
vep-validation-tools = [
    { git = "https://github.com/Abstract-Data/vep-validation-tools.git", markers = "sys_platform == 'linux'"},
    { path = "../vep-validation-tools", develop = true, markers = "sys_platform == 'darwin'" }
]

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.112.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
